# sleeper-data-pipeline

./: .gitignore  2022_league_data.json  README.md  dataflow.md  decisions.org  docs.py  docs.txt  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  winners_bracker_2023.json
.github/workflows/: deploy-to-lambda.yml  deploy_to_lambda.yaml  deploy_with_tf.yaml
sleeper_data_pypline/: __init__.py  commands.py  decisions.org  etl.py  fetchers.py  mongo.py  queries.py  transforms.py  utils.py  writes.py
src/: handler.ts  index.ts
src/sleeper/: sleeper_wrapper.ts  upsert_sleeper_players.ts
src/types/: SleeperPlayer.ts  league.ts
terraform/: main.tf  terraform.tfvars
